Finish HW#4 - Thymeleaf

--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -1,11 +1,17 @@
 topbar.main=Main
 topbar.genres=Genres
-topbar.news=News
+topbar.news=Recent 
 topbar.popular=Popular
 topbar.authors=Authors
+topbar.postponed=Postponed
+topbar.cart=Cart
 menu.select=Choose language 
 title=Book store
 signin=Sign in
+login=Log in
+register=Register 
+registration=Registration
+verify=Verify
 documents=Documents
 about=About
 faqs=FAQ
@@ -13,3 +19,22 @@ contacts=Contacts
 searchbar.search=Search
 middle.recommendations=Recommendations 
 middle.tags=Books by tag
+easy.reading=Easy reading
+detective=Detectives
+technics=Technics
+bestseller=Best-seller
+books=Books
+login.title=Enter e-mail or telephone number
+telephone=telephone number
+next=Next
+login.confirm.phone= Enter the code sent to your phone:
+login.confirm.mail= Enter the code sent to your e-mail:
+placeholder.name=Enter name
+placeholder.phone=Enter telephone number
+placeholder.mail=Enter e-mail
+placeholder.topic=Enter topic
+placeholder.message=Enter the message
+contacts.bot=Telegram-bot: 
+contacts.form=Contact us:
+contacts.send=Send
+faq.title=Frequently asked questions:
