--- a/src/main/resources/lang/messages_ru.properties
+++ b/src/main/resources/lang/messages_ru.properties
@@ -3,9 +3,15 @@ topbar.genres=Жанры
 topbar.news=Новинки
 topbar.popular=Популярное
 topbar.authors=Авторы
+topbar.postponed=Отложенное
+topbar.cart=Корзина
 menu.select=Выбор языка
 title=Книжный магазин
 signin=Войти
+login=Вход
+register=Зарегистрироваться 
+registration=Регистрация
+verify=Подтвердить
 documents=Документы
 about=О компании
 faqs=Помощь
@@ -13,3 +19,22 @@ contacts=Контакты
 searchbar.search=Поиск
 middle.recommendations=Рекомендуемое 
 middle.tags=Книги по тегам
+easy.reading="Лёгкое чтение
+detective=Детективы
+technics=Техника
+bestseller=Бестселлер
+books=Книги
+login.title=Введите e-mail или телефон
+telephone=Телефон
+next=Далее
+login.confirm.phone=На Ваш телефон отправлено сообщение с кодом для входа. Введите его:
+login.confirm.mail= На Ваш e-mail отправлена ссылка для входа и код. Перейдите по ссылке или введите код ниже:
+placeholder.name=Введите Имя 
+placeholder.phone=Введите телефон
+placeholder.mail=Введите e-mail
+placeholder.topic=Введите тему
+placeholder.message=Введите сообщение
+contacts.bot=Телеграм-бот:
+contacts.form=Напишите нам:
+contacts.send=Отправить
+faq.title=Наиболее частые вопросы:
