Modification on HW#4

--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -5,11 +5,13 @@ topbar.popular=Popular
 topbar.authors=Authors
 topbar.postponed=Postponed
 topbar.cart=Cart
-menu.select=Choose language 
+lang.change=Change the language
+lang.eng=English
+lang.ru=Russian
 title=Book store
 signin=Sign in
 login=Log in
-register=Register 
+register=Register
 registration=Registration
 verify=Verify
 documents=Documents
