--- a/src/main/resources/lang/messages_ru.properties
+++ b/src/main/resources/lang/messages_ru.properties
@@ -5,7 +5,9 @@ topbar.popular=Популярное
 topbar.authors=Авторы
 topbar.postponed=Отложенное
 topbar.cart=Корзина
-menu.select=Выбор языка
+lang.change=Выбрать язык
+lang.eng=Английский
+lang.ru=Русский
 title=Книжный магазин
 signin=Войти
 login=Вход
