Add paginated search functionality

--- a/src/main/resources/lang/messages_en.properties
+++ b/src/main/resources/lang/messages_en.properties
@@ -19,6 +19,8 @@ about=About
 faqs=FAQ
 contacts=Contacts
 searchbar.search=Search
+searchbar.showMore=Show more
+searchbar.foundBooks=Found books:
 middle.recommendations=Recommendations 
 middle.tags=Books by tag
 easy.reading=Easy reading
