--- a/src/main/resources/lang/messages_ru.properties
+++ b/src/main/resources/lang/messages_ru.properties
@@ -19,6 +19,8 @@ about=О компании
 faqs=Помощь
 contacts=Контакты
 searchbar.search=Поиск
+searchbar.showMore=Показать еще
+searchbar.foundBooks=Найденные книги:
 middle.recommendations=Рекомендуемое 
 middle.tags=Книги по тегам
 easy.reading="Лёгкое чтение
